css/style.css
* {
	margin: 0; 
	padding: 0;
}

body {
	font-family: 'Arial', sans-serif; 
	background: #e9f0f5;

}

p{
	margin: 10px 0; 
}

.container {
	width: 940px;
	overflow: auto;
	margin: auto; 
}

header {
	background-color: #5e6482;
	height: 45px;
	color: #fff;
	text-align: center;
	padding: 30px;
}

#time_line {
	background: url(../img/line.png) repeat-y 50%  0; 
	min-height: 700px;
	margin: 30px 0; 
}

.tl_block {
	position: relative;;
	width: 100%;
	margin-bottom: 20px;
	min-height: 100px; 
}

.tl_year {
	background: url(../img/point-big.png) no-repeat 50% 0; 
	display: block;
	height: 70px;
	width: 70px;
	text-align: center;
	margin: auto;
	margin-top: 20px;
}

.tl_year div {
	padding-top: 25px;
	text-align: center;
	color: #fff;
	font-weight: bold;
	display: block;
	font-size: 18px;
}

.tl_event {
	background: url(../img/point-small.png) no-repeat top center;
	margin-top: auto;
	width: 100%;
	overflow: hidden;
	visibility: visible;
}

.tl_event > div {
	width: 45%;
	position: relative;
}

.tl_event div div {
	background: #fff;
	border-radius: 10px;
	padding: 15px;
}

.tl_event div.event_r {
	float: right;
	background: url(../img/arrow-left.png) no-repeat 0 0 ;
}

.tl_event div.event_r div{
	margin-left: 20px;
}

.tl_event div.event_l {
	float: left;
	background: url(../img/arrow-right.png) no-repeat top right;
}

.tl_event div.event_l div{
	margin-right: 20px;
}

.tl_event time {
	background: #c03b44; 
	color: #fff;
	font-size: 12px;
	padding: 5px;
	border-radius: 5px;
}


footer {
	background-color: #5e6482;
	height: 30px;
	color: #fff;
	text-align: center;
	padding: 10px 0;
}

